yml-Files/allinone.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testcomic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testcomic
  template:
    metadata:
      labels:
        app: testcomic
    spec:
      containers:
      - name: nginxcomic
        image: devops2022.azurecr.io/comikbook:v-521 
        ports:
        - containerPort: 80
        volumeMounts:
          - name: nginx-conf
            mountPath: /etc/nginx
      - name: exporter
        image: nginx/nginx-prometheus-exporter 
        ports:
        - containerPort: 9113
        args:
        - -nginx.scrape-uri=https://devopsdaemons.devops2022.de/nginx_status
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf      
---
apiVersion: v1
kind: Service
metadata:
  name: testcomic-service
spec:
  selector:
    app: testcomic
  ports:
    - name: https
      port: 80
      targetPort: 80
    - name: exporter
      port: 9113
      targetPort: 9113
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: comicingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts: 
      - devopsdaemons.devops2022.de
      secretName: fakecertificate-tls
  rules:
  - host: devopsdaemons.devops2022.de
    http:
      paths:
      - path: /.*
        pathType: Prefix
        backend:
          service:
            name: testcomic-service
            port:
              number: 80
  - host: kibanadaemons.devops2022.de
    http:
      paths:
      - path: /.*
        pathType: Prefix
        backend:
          service:
            name: comicbook-kb-http
            port:
              number: 5601
