yml-Files/deployment.service.ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginxcomicbook1
  #labels:
  # app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: devops2022.azurecr.io/nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginxcomicbook2
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: nginxcomicbook3
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: devops2022.de
    http:
      paths:
      - path: "/comicbook"
        pathType: Prefix
        backend:
          service:
            name: nginxcomicbook2
            port:
              number: 80
